--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "persian-twitch-client",
   "productName": "persian-twitch-client",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "My Electron application description",
   "main": ".webpack/main",
   "scripts": {
@@ -44,6 +44,7 @@
     "typescript": "~4.5.4"
   },
   "dependencies": {
+    "@electron-forge/publisher-github": "6.1.1",
     "autoprefixer": "10.4.14",
     "electron-squirrel-startup": "1.0.0",
     "postcss": "8.4.24",
@@ -53,6 +54,7 @@
     "react-hls-player": "3.0.7",
     "react-hot-toast": "2.4.1",
     "react-router-dom": "6.11.2",
-    "tailwindcss": "3.3.2"
+    "tailwindcss": "3.3.2",
+    "update-electron-app": "2.0.1"
   }
 }
