adding repository to package json

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "persian-twitch-client",
   "productName": "persian-twitch-client",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "My Electron application description",
   "main": ".webpack/main",
   "scripts": {
@@ -56,5 +56,9 @@
     "react-router-dom": "6.11.2",
     "tailwindcss": "3.3.2",
     "update-electron-app": "2.0.1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/alikhalilifar/persian-twitch-client.git"
   }
 }
